[package]
edition = "2021"
name = "tvm_abi"
version = "3.0.0"

[dependencies]
base64 = "0.10.0"
byteorder = "1.3.2"
chrono = "0.4.9"
failure = "0.1"
hex = "0.3.2"
num-bigint = "0.4"
num-traits = "0.2"
serde = "1.0.91"
serde_derive = "1.0.91"
serde_json = "1.0.41"
sha2 = "0.10"
tvm_block = { git = "https://github.com/tvmlabs/tvm-block", branch = "main" }
tvm_types = { git = "https://github.com/tvmlabs/tvm-types", branch = "main" }

[dev-dependencies]
pretty_assertions = "1.3"
