[package]
edition = "2021"
name = "tvm_abi"
version = "3.0.0"

[dependencies]
anyhow = "1.0.79"
base64 = "0.21.7"
byteorder = "1.5.0"
chrono = "0.4.33"
hex = "0.4.3"
num-bigint = "0.4.4"
num-traits = "0.2.17"
serde = "1.0.196"
serde_derive = "1.0.196"
serde_json = "1.0.113"
sha2 = "0.10.8"
thiserror = "1.0.56"
tvm_block = { git = "https://github.com/tvmlabs/tvm-block", tag = "2.0.0" }
tvm_types = { git = "https://github.com/tvmlabs/tvm-types", tag = "3.0.1" }

[dev-dependencies]
pretty_assertions = "1.4.0"
